added homework index file

--- a/Activity -2/index.html
+++ b/Activity -2/index.html
@@ -7,10 +7,7 @@
     <title>ITDEV-160 Activities</title>
 </head>
 <body>
-    <h1>ITDEV-160 Activities</h1>
-    <ul>
-        <li> <a href="activity-1/index.html">Activity</a></a></li>
-    </ul>
+    
  
     <img src="images/Birds 3.jpg" alt=""/>
     <br>
@@ -18,7 +15,7 @@
 
 <h1>Scientific American</h1>
 <!-- simple table -->
-<table id-"simple-table" border="1" cellspacing="0">
+<table id="simple-table" border="1" cellspacing="0">
 <tr>
 <th>Model</th>
 <th>url</th>
@@ -41,6 +38,7 @@
 </tr>
 
 </table>
+<br>
  <!-- Complex Table -->
  <table id="complex-table" border="1" cellspacing="0">
 
