--- a/Activity -2/index.html
+++ b/Activity -2/index.html
@@ -7,42 +7,34 @@
     <title>ITDEV-160 Activities</title>
 </head>
 <body>
-    
- 
     <img src="images/Birds 3.jpg" alt=""/>
     <br>
     <a href="knowles@gmail.com"> contact Trevor</a>
-
 <h1>Scientific American</h1>
 <!-- simple table -->
 <table id="simple-table" border="1" cellspacing="0">
+    <tr>
+        <th>Exotic Birds</th>
+        <th>url</th>
+    </tr>
+  <tr>
+    <td>Baltimore Oriole</td>
+    <td>
+        <a href="https://www.google.com/search?q=birds&rlz=1C1GCEA_enUS782US782&source=lnms&tbm=isch&sa=X&sqi=2&ved=2ahUKEwiRjJbJ2_7yAhVASfEDHVBIASgQ_AUoAXoECAEQAw&biw=986&bih=641#imgrc=k-pjhxcBIIbG6M">Birds are awesome</a>
+    </td>
+  </tr>  
 <tr>
-<th>Model</th>
-<th>url</th>
-</tr>
-
-<td>Focal Utopia</td>
-<td>
-<a   href="https://www.google.com/search?q=birds&rlz=1C1GCEA_enUS782US782&source=lnms&tbm=isch&sa=X&sqi=2&ved=2ahUKEwiRjJbJ2_7yAhVASfEDHVBIASgQ_AUoAXoECAEQAw&biw=986&bih=641#imgrc=k-pjhxcBIIbG6M">Birds
-    are awesome</a>
-</td>
-
-</td>
-
-</tr>
-<tr>
-<td> ZMF Auteur</td>
+<td> Backyard Birds</td>
 <td>
 <a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.birdscaribbean.org%2F2020%2F10%2Fbirds-connect-our-world-day-26%2F&psig=AOvVaw0p8SLGJjKCMHSDLTpS9-Tf&ust=1631717522193000&source=images&cd=vfe&ved=0CA4QtaYDahcKEwi40LvN2_7yAhUAAAAAHQAAAAAQEQ">World of Birds</a>
 </td>
 </tr>
-
 </table>
 <br>
  <!-- Complex Table -->
  <table id="complex-table" border="1" cellspacing="0">
 
-    <th>
+    <thead>
 <tr>
     <th>Feature</th>
     <th scope="column">view bird</th>
@@ -51,26 +43,23 @@
     <th scope="column">Smart birds</th>
 </tr>
 
-    </th>
+    </thead>
     <tbody>
         <tr>
-        <td scope="row"> Focal Utopia</td>
+        <td scope="row"> Exotic Birds</td>
         <td colspan="3">yes</td>
         <td>no</td>
     </tr>
     <tr>
-        <td>ZMF Auteur</td>
+        <td>Paradise Species</td>
         <td>yes</td>
         <td colspan="2">no</td>
         <td>yes</td>
     </tr>
-
     </tbody>
     <tfoot>
         <td colspan="5">&copy; Bird Kingdom 2021</td>
     </tfoot>
  </table>
 </body> 
-</body> 
-</body>
 </html>
