--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 <body>
     <h1>ITDEV-160 Activities</h1>
     <ul>
-        <li> <a href="activity-1/index.html">Activity 1</a></a></li>
+        <li> <a href="activity-1/index.html">Activity 1</a></li>
         <li> <a href="activity-2/index.html">Activity-2</a></li>
+        <li><a href="activity-3 /index.html">activity-3</a></li>
     </ul>
 </body>
 </html>
