--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ITDEV-160 Activities</title>
 </head>
 <body>
     <h1>ITDEV-160 Activities</h1>
@@ -14,6 +14,7 @@
         <li><a href="activity-3 /index.html">activity-3</a></li>
         <li><a href="activity-4 /index.html">activity-4</a></li>
         <li><a href="activity-5 /index.html">activity-5</a></li>
+        <li><a href="activity-6 /index.html">activity-6</a></li>
     </ul>
 </body>
 </html>
